--- a/changelogs/1.1.0.md
+++ b/changelogs/1.1.0.md
@@ -62,6 +62,7 @@
 #### community5.nut (Death's Door):
 
 - Enabled B&W state when under 25% health.
+- Fixed heartbeat sound when taking over bot.
 
 #### tankrun.nut:
 
